--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@ng-bootstrap/ng-bootstrap": "^9.1.0",
     "bootstrap": "^4.5.0",
+    "firebase": "^8.4.1",
     "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
     "save": "^2.4.0",
