--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "~11.2.3",
     "@angular/compiler": "~11.2.3",
     "@angular/core": "~11.2.3",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "~11.2.3",
     "@angular/localize": "~11.2.3",
     "@angular/platform-browser": "~11.2.3",
