--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/service-worker": "~11.2.3",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@ng-bootstrap/ng-bootstrap": "^9.1.0",
+    "animate.css": "^4.1.1",
     "bootstrap": "^4.5.0",
     "firebase": "^8.4.1",
     "jquery": "^3.6.0",
